Update main.css: header logo was not fitting in low resolution mobile displays; Decreased logo margin to -ve values; Fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -264,8 +264,8 @@ section {
 }
 
 .header .logo img {
-  max-height: 40px;
-  margin-right: 6px;
+  max-height: 50px;
+  margin-right: -25px;
 }
 
 .header .logo h1 {
